--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.9.1
+Brotli==1.1.0
 dj-database-url==3.0.1
 Django==5.2.5
 djangorestframework==3.16.1
@@ -11,3 +12,4 @@ psycopg2-binary==2.9.10
 python-dotenv==1.1.1
 sqlparse==0.5.3
 typing_extensions==4.14.1
+whitenoise==6.10.0
