--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.9.1
 Django==5.2.6
+dotenv==0.9.9
 gunicorn==23.0.0
 packaging==25.0
+python-dotenv==1.1.1
 sqlparse==0.5.3
 typing_extensions==4.15.0
